--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Daily Routine</string>
+
+    <string name="nav_title_timeline">Timeline</string>
+    <string name="nav_title_termless">Some Day</string>
+    <string name="nav_title_more">More</string>
 </resources>
