--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="nav_title_timeline">Timeline</string>
     <string name="nav_title_termless">Some Day</string>
     <string name="nav_title_more">More</string>
+    <string name="app_bar_title">Daily Routine</string>
 </resources>
